# P.A.W.K

./: .gitignore  .gitmodules  README.md  environment.yml  requirements.txt  try.py
catkin_ws/: REAMDE.md  frames.gv
catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
catkin_ws/src/actor_collisions/: CMakeLists.txt  actor_collisions.world.erb  package.xml
catkin_ws/src/attentive_people/: CMakeLists.txt  package.xml
catkin_ws/src/get_current_pos/: CMakeLists.txt  package.xml
catkin_ws/src/mpc_algorithm/: CMakeLists.txt
catkin_ws/src/obstacle_detection/: CMakeLists.txt  package.xml
catkin_ws/src/robot_goal_mover/: CMakeLists.txt
driver_assistance/src/mediapipe/: CMakeLists.txt  package.xml
hallway/: actor.sdf  example.world  hallway.world  model.sdf
kairos-info/: README.md  connect to ros.md  depth_camera_info.txt  file.txt
multi_det/: package.xml
multi_det/scripts/: yolo_subscriber.py
pedestrian_detection/src/detect_people/: CMakeLists.txt  package.xml
pedestrian_detection/src/multi_det/: CMakeLists.txt
show_frame/: show_frame.py
simulation/models/: actors.sdf
simulation/models/business_man/: model.sdf
simulation/world/: actor.sdf  actor1.sdf  hallaw+person.world  hallway.world  walk.world
test_scripts/: CMakeLists.txt  package.xml
test_scripts/scripts/: attentive_multiple.py  attentive_one_person.py  camera_subscriber.py  image_publisher.py  publisher_node.py  recognize_distractions.py  test.py  test_cv_bridge.py  test_multi.py
trial_subscriber/: CMakeLists.txt  package.xml
trial_subscriber/scripts/: listener.py
(+51 files in other folders)
