<?xml version="1.0"?>
<package format="2">
  <name>actor_collisions</name>
  <version>0.0.1</version>
  <description>The actor_collisions package</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
  </export>
</package>